--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git
+  name: github
   repo: longtoothban/LongToothSite # Replace with your GitHub repository
   branch: develop # Default branch name for your repo 
   token: "${LONGTOOTH_GITHUB_TOKEN}"
